--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+:root {
+  --gray-8: #343a40;
+  --gray-2: #e9ecef;
+  --cyan-9: #0b7285;
+  --size-2: 0.5rem;
+  --size-4: 1.25rem;
+}
+
 html {
   box-sizing: border-box;
   font-size: 62.5%;
@@ -9,7 +17,10 @@ html {
   padding: 0;
   margin: 0;
 }
-body {
+p {
+  margin: 1rem 0;
+}
+/* body {
   font-size: 1.6rem;
   font-family: system-ui, -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
@@ -18,69 +29,67 @@ body {
     center/ cover;
   min-height: 100vh;
   position: relative;
-}
+} */
 
-#open-btn {
-  position: absolute;
-  top: 85%;
-  left: 65%;
-  padding: 1.3rem 2rem;
-  color: white;
-  font-size: 2rem;
-  background: transparent;
-  border: 1px solid white;
-  border-radius: 0.8rem;
-  transition: 0.4s ease;
-  cursor: pointer;
-}
-#open-btn:hover {
-  background-color: white;
-  color: black;
-}
-
-#modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 2rem 3rem;
-  border: 1px solid white;
-  border-radius: 0.8rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  background-color: white;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
-
-  animation-name: animationModal;
-  animation-duration: 0.4s;
-}
-
-#close-btn {
-  margin-left: 3rem;
-  color: red;
-  cursor: pointer;
-  font-size: 3rem;
-}
-
-#modal-container {
-  display: none;
+dialog:modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
-@keyframes animationModal {
-  from {
-    top: -300px;
-    opacity: 0;
-  }
-  to {
-    top: 50%;
-    opacity: 1;
-  }
+.modal {
+  max-width: 50ch;
+  padding: 1rem 2rem;
+  bottom: none;
+  box-shadow: 0 0 1rem rgb(0, 0, 0.3);
+  border: none;
+  border-radius: 0.8rem;
+}
+.modal > * {
+  margin: 0 0 0.5rem 0;
+}
+
+.modal::-webkit-backdrop {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.modal::backdrop {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+/* extra styling */
+body {
+  min-height: 100vh;
+  margin: 2rem;
+  font-family: system-ui;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  color: var(--gray-8);
+}
+
+h1 em {
+  color: var(--cyan-9);
+  text-decoration: underline;
+  text-underline-offset: 0.25em;
+}
+
+.button {
+  border: 0;
+  cursor: pointer;
+  background: var(--gray-8);
+  color: var(--gray-2);
+  font-weight: 700;
+  font-size: 1.6rem;
+  padding: var(--size-2) var(--size-4);
+}
+
+.button:hover,
+.button:focus {
+  background: var(--cyan-9);
+}
+
+form {
+  display: grid;
+  gap: 1em;
 }
